Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </style>
 </head>
 <body>
-  <header><img src="img/Logo99.jpg" alt="Tilo Café French" class="banner-img"></header>
+  <header><img src="img/french99.jpg" alt="Tilo Café French" class="banner-img"></header>
   <div class="banner">¡Bienvenidos a Tilo Café French!</div>
 
   <div class="search-box">
