--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <script>
 document.addEventListener('DOMContentLoaded', () => {
-  const RAW_URL = 'https://raw.githubusercontent.com/cholose10/cartafrench/main/productos.json';
+ const RAW_URL = 'productos.json';
   const searchInput = document.getElementById('search');
   const btnSearch = document.getElementById('btnSearch');
   const categoryContainer = document.getElementById('category-buttons');
